--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,23 @@ div.disclaimer {
   padding: 3px 20px;
 }
 
+img.powered {
+  width: 150px;
+}
+
+div.powered {
+  padding-top: 10px;
+  width: 150px;
+  margin-left: auto;
+  margin-right: 0;
+}
+
+div.startButton {
+  width: 100px;
+  margin: auto;
+}
+
+div.startButton button {
+  width: 100px;
+}
+
