--- a/src/index.css
+++ b/src/index.css
@@ -87,12 +87,14 @@ fieldset.answer-section legend{
 }
 
 div.same {
+  color: #628354;
   background-color: #e1ffd5;
   border: 1px solid #628354;
   border-radius: 4px;
 }
 
 div.different {
+  color: #8a1515;
   background-color: #ffdfdf;
   border: 1px solid #8a1515;
   border-radius: 4px;
