--- a/src/index.css
+++ b/src/index.css
@@ -88,6 +88,7 @@ fieldset.answer-section legend{
 
 div.same {
   color: #628354;
+  font-weight: bold;
   background-color: #e1ffd5;
   border: 1px solid #628354;
   border-radius: 4px;
@@ -95,6 +96,7 @@ div.same {
 
 div.different {
   color: #8a1515;
+  font-weight: bold;
   background-color: #ffdfdf;
   border: 1px solid #8a1515;
   border-radius: 4px;
